<resources>
    <string name="app_name">TodoTodo</string>
    <string name="back">뒤로 가기</string>
    <string name="add">항목 추가</string>
    <string name="date">날짜</string>
    <string name="todo">할일</string>

    <string name="back_key">뒤로 버튼을 한번 더 누르면 앱을 종료합니다.</string>

    <string name="add_todo">할일 추가하기</string>
    <string name="add_btn">추가</string>
    <string name="input">할일 입력</string>

    <string name="previous_date">이전 날짜는 선택하실 수 없습니다!</string>
    <string name="contents_empty">할일의 내용을 입력해주세요.</string>

    <string name="notification">알람 설정</string>
    <string name="apply_btn">적용하기</string>
    <string name="noti_info">원하는 시간에 알람을 보내드릴게요!</string>
    <string name="noti_text">오늘의 할일을 완료해주세요!</string>
    <string name="perm_info">앱 알람 권한을 켜주세요!</string>
    <string name="perm_btn">권한 설정하러 가기</string>

    <string name="previous_items">이전 항목</string>
</resources>