<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="50dp"
    android:layout_marginVertical="10dp"
    android:background="#eeeeee">

    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ff7a00"
        android:gravity="center"
        android:text="@string/add_todo"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_bar" />

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@+id/calendar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/date" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/todo_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@+id/date_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/todo" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#66bdbdbd"
        app:layout_constraintTop_toBottomOf="@+id/todo_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add_btn"
            app:layout_constraintLeft_toRightOf="@+id/space"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>