<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noti_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:id="@+id/switch_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/noti_info" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_compat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="30dp" />
            </LinearLayout>

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                app:layout_constraintBottom_toTopOf="@+id/btn_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_layout" />

            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintTop_toBottomOf="@+id/time_picker">

                <Space
                    android:id="@+id/space"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/apply_btn"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:enabled="false"
                    android:text="@string/apply_btn" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/perm_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/perm_text1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/perm_info"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/perm_text2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/noti_info"
                app:layout_constraintTop_toBottomOf="@+id/perm_text1" />

            <Button
                android:id="@+id/perm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perm_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/perm_text2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>